--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <body>
         <h1>Math Club Handouts</h1>
         <h2>Geometry</h2>
-        1. <a href="Geo1.pdf">Geometry 1-Basis of Geometry-Blank</a> <a href="Geo1_Filled.pdf">Geometry 1-Basis of Geometry-Filled</a>
+        <ol>
+            <li>
+                <a href="Geo1_Blank.pdf">Geometry 1-Basis of Geometry-Blank</a> <br>
+                <a href="Geo1.pdf">Geometry 1-Basis of Geometry-Filled</a>
+            </li>
+            <li>
+                <a href="Geo2_Blank.pdf">Geometry 2-Circles-Blank</a> <br>
+                <a href="Geo2.pdf">Geometry 2-Circles-Filled</a>
+            </li>
+            <li>
+                <a href="Geometry_Crossword.pdf">Geometry Crossword</a>
+            </li>
+            <li>
+                <a href="Geo3_Blank.pdf">Geometry 3-Miscellaneous-Blank</a> <br>
+                <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled(unfinished)</a>
+            </li>
+            <li>
+                <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
+                <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled(unfinished)</a>
+            </li>
+            <li>
+                <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
+                <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
+            </li>
+        </ol>
     </body>
 </html>
