--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Math Club Handouts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
 	</head>
     <body>
         <h1>Math Club Handouts</h1>
@@ -32,6 +33,47 @@
                 <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
                 <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
             </li>
+            
         </ol>
+        
+        <h2>Algebra</h2>
+
+        <ol>
+            <li>
+                <a href="Alge1.pdf">Algebra 1-Basis of Algebra-Blank</a>
+            </li>
+            <li>
+                <a href="Alge2.pdf">Algebra 2-Functional Equations-Blank</a>
+            </li>
+            <li>
+                <a href="Alge3.pdf">Algebra 3-Sequence and Series-Blank</a>
+            </li>
+            <li>
+                <a href="Alge4.pdf">Algebra 4-Miscellaneous-Blank</a>
+            </li>
+        </ol>
+
+        <h2>Combinatorics</h2>
+        <ol>
+            <li>
+                Place Holder
+            </li>
+        </ol>
+        <h2>Number Theory</h2>
+        <ol>
+            <li>
+                Place Holder
+            </li>
+            <li>
+                Place Holder
+            </li>
+        </ol>
+        <hr>
+        <footer>
+            <p>TSS Math Club</p>
+            <p><a href="tssmathclubofficial@gmail.com">tssmathclubofficial@gmail.com</a></p>
+          </footer>
+
+
     </body>
 </html>
