--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Combinatorics</h2>
         <ol>
             <li>
-                Place Holder
+                <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank(unfinished)</a>
             </li>
         </ol>
         <h2>Number Theory</h2>
