--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
                 Place Holder
             </li>
         </ol>
+
+        <h2>External Links</h2>
+        <ol>
+            <li>
+                <a href="https://www.cemc.uwaterloo.ca/contests/past_contests.html">CEMC Contests</a>
+            </li>
+            <li>
+                <a href="https://cms.math.ca/competitions/comc/">COMC Contests</a>
+            </li>
+            <li>
+                <a href="https://artofproblemsolving.com/wiki/index.php/AMC_10_Problems_and_Solutions">AMC10 Contests</a>
+            </li>
+            <li>
+                <a href="https://artofproblemsolving.com/wiki/index.php/AMC_12_Problems_and_Solutions">AMC12 Contests</a>
+            </li>
+            <li>
+                <a href="https://artofproblemsolving.com/wiki/index.php/AIME_Problems_and_Solutions">AIME Contests</a>
+            </li>
+        </ol>
+
         <hr>
         <footer>
             <p>TSS Math Club</p>
