--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
                 <a href="https://artofproblemsolving.com/wiki/index.php/AIME_Problems_and_Solutions">AIME Contests</a>
             </li>
         </ol>
-
         <hr>
         <footer>
             <p>TSS Math Club</p>
-            <p><a href="tssmathclubofficial@gmail.com">tssmathclubofficial@gmail.com</a></p>
+            <p><a href="mailto:tssmathclubofficial@gmail.com">tssmathclubofficial@gmail.com</a></p>
         </footer>
 
 
