--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li>
                 <a href="Geo3_Blank.pdf">Geometry 3-Miscellaneous-Blank</a> <br>
-                <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled(unfinished)</a>
+                <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled</a>
             </li>
             <li>
                 <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
