--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <li>
                 <a href="Alge4.pdf">Algebra 4-Miscellaneous-Blank</a>
             </li>
+            <li>
+                <a href="Trig and Log.pdf">Algebra 5-Trignometry and logarithm</a>
+            </li>
         </ol>
 
         <h2>Combinatorics</h2>
