--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="Alge4.pdf">Algebra 4-Miscellaneous-Blank</a>
             </li>
             <li>
-                <a href="Trig and Log.pdf">Algebra 5-Trignometry and logarithm</a>
+                <a href="Trig and Log.pdf">Algebra 5-Trignometry and Logarithm</a>
             </li>
         </ol>
 
