--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	</head>
     <body>
-        <h1>Math Club Handouts</h1>
+        <h1>TSS Math Club</h1>
         <h2>Geometry</h2>
         <ol>
             <li>
