--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </li>
             <li>
                 <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
-                <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled(unfinished)</a>
+                <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled</a>
             </li>
             <li>
                 <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
