--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
         <ol>
             <li>
-                <a href="Alge1.pdf">Algebra 1-Basis of Algebra-Blank</a>
+                <a href="Alge1.pdf">Algebra 1-Basis of Algebra-Blank</a> <br>
+                <a href="Alge1_Filled_Hand_Written.pdf">Algebra 1-Basis of Algebra-Filled (Hand Written)</a>
             </li>
             <li>
-                <a href="Alge2.pdf">Algebra 2-Functional Equations-Blank</a>
+                <a href="Alge2.pdf">Algebra 2-Functional Equations-Blank</a> <br>
+                <a href="Alge2_Filled_Hand_Written.pdf">Algebra 2-Functional Equations-Filled (Hand Written)</a>
             </li>
             <li>
                 <a href="Alge3.pdf">Algebra 3-Sequence and Series-Blank</a>
