--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
                 Place Holder
             </li>
         </ol>
-
+        <h2>Problem of the Day</h2>
+        <ol>
+            <li>
+                <a href="https://www.instagram.com/tssmathclub/">Problem of the Day</a>
+            </li>
+        </ol>
         <h2>External Links</h2>
         <ol>
             <li>
