--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 	</head>
     <body>
         <h1>TSS Math Club</h1>
-        <h2>Geometry</h2>
+        <h2>Slide Decks</h2>
+        <ol>
+            <li>
+                <a href="Math_Club_Meeting_1.pdf">Math_Club_Meeting_1</a>
+            </li>
+            <li>
+                <a href="CIMC__CSMC_prep_slides.pdf">CSIMC Prep</a>
+            </li>
+        </ol>
+        <h2>Handouts</h2>
+        <h3>Geometry</h3>
         <ol>
             <li>
                 <a href="Geo1_Blank.pdf">Geometry 1-Basis of Geometry-Blank</a> <br>
@@ -36,7 +46,7 @@
             
         </ol>
         
-        <h2>Algebra</h2>
+        <h3>Algebra</h3>
 
         <ol>
             <li>
@@ -58,13 +68,13 @@
             </li>
         </ol>
 
-        <h2>Combinatorics</h2>
+        <h3>Combinatorics</h3>
         <ol>
             <li>
                 <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank(unfinished)</a>
             </li>
         </ol>
-        <h2>Number Theory</h2>
+        <h3>Number Theory</h3>
         <ol>
             <li>
                 Place Holder
