--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <hr>
         <footer>
             <p>TSS Math Club</p>
+            <p><a href="https://discord.gg/x8U6ymvAw8">Math Club Discord</a></p>
             <p><a href="mailto:tssmathclubofficial@gmail.com">tssmathclubofficial@gmail.com</a></p>
         </footer>
 
