--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3>Combinatorics</h3>
         <ol>
             <li>
-                <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank(unfinished)</a>
+                <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank</a>
             </li>
         </ol>
         <h3>Number Theory</h3>
