--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
         <h3>Number Theory</h3>
         <ol>
             <li>
-                Place Holder
-            </li>
-            <li>
-                Place Holder
+                <a href="Number Theory 1.pdf">Number Theory 1-Basis of Number Theory-Blank (Unfinished)</a>
             </li>
         </ol>
         <h2>Problem of the Day</h2>
