--- a/index.html
+++ b/index.html
@@ -1,116 +1,208 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>TSS Math Club</title>
+		<title>Math Club | Thornhill Secondary School</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="w3.css">
+    </head>
+    <body class="container">
+    <div class="card">
+        <div class="hcard">
+            <div class="large">
+                Math Club Resources
+            </div>
+            <div class="small">
+                Thornhill Secondary School
+            </div>
+        </div>
+        <hr>
+        <div>
+            <h2>Slide Decks</h2>
+            <ol>
+                <li>
+                    <a href="Math_Club_Meeting_1.pdf">Math_Club_Meeting_1</a>
+                </li>
+                <li>
+                    <a href="CIMC__CSMC_prep_slides.pdf">CSIMC Prep</a>
+                </li>
+            </ol>
+            <h2>Handouts</h2>
+            <h3>Geometry</h3>
+            <ol>
+                <li>
+                    <a href="Geo1_Blank.pdf">Geometry 1-Basis of Geometry-Blank</a> <br>
+                    <a href="Geo1.pdf">Geometry 1-Basis of Geometry-Filled</a>
+                </li>
+                <li>
+                    <a href="Geo2_Blank.pdf">Geometry 2-Circles-Blank</a> <br>
+                    <a href="Geo2.pdf">Geometry 2-Circles-Filled</a>
+                </li>
+                <li>
+                    <a href="Geometry_Crossword.pdf">Geometry Crossword</a>
+                </li>
+                <li>
+                    <a href="Geo3_Blank.pdf">Geometry 3-Miscellaneous-Blank</a> <br>
+                    <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled</a>
+                </li>
+                <li>
+                    <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
+                    <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled</a>
+                </li>
+                <li>
+                    <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
+                    <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
+                </li>
 
-	</head>
-    <body>
-        <h1>TSS Math Club</h1>
-        <h2>Slide Decks</h2>
-        <ol>
-            <li>
-                <a href="Math_Club_Meeting_1.pdf">Math_Club_Meeting_1</a>
-            </li>
-            <li>
-                <a href="CIMC__CSMC_prep_slides.pdf">CSIMC Prep</a>
-            </li>
-        </ol>
-        <h2>Handouts</h2>
-        <h3>Geometry</h3>
-        <ol>
-            <li>
-                <a href="Geo1_Blank.pdf">Geometry 1-Basis of Geometry-Blank</a> <br>
-                <a href="Geo1.pdf">Geometry 1-Basis of Geometry-Filled</a>
-            </li>
-            <li>
-                <a href="Geo2_Blank.pdf">Geometry 2-Circles-Blank</a> <br>
-                <a href="Geo2.pdf">Geometry 2-Circles-Filled</a>
-            </li>
-            <li>
-                <a href="Geometry_Crossword.pdf">Geometry Crossword</a>
-            </li>
-            <li>
-                <a href="Geo3_Blank.pdf">Geometry 3-Miscellaneous-Blank</a> <br>
-                <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled</a>
-            </li>
-            <li>
-                <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
-                <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled</a>
-            </li>
-            <li>
-                <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
-                <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
-            </li>
-            
-        </ol>
-        
-        <h3>Algebra</h3>
+            </ol>
 
-        <ol>
-            <li>
-                <a href="Alge1.pdf">Algebra 1-Basis of Algebra-Blank</a> <br>
-                <a href="Alge1_Filled_Hand_Written.pdf">Algebra 1-Basis of Algebra-Filled (Hand Written)</a>
-            </li>
-            <li>
-                <a href="Alge2.pdf">Algebra 2-Functional Equations-Blank</a> <br>
-                <a href="Alge2_Filled_Hand_Written.pdf">Algebra 2-Functional Equations-Filled (Hand Written)</a>
-            </li>
-            <li>
-                <a href="Alge3.pdf">Algebra 3-Sequence and Series-Blank</a>
-            </li>
-            <li>
-                <a href="Alge4.pdf">Algebra 4-Miscellaneous-Blank</a>
-            </li>
-            <li>
-                <a href="Trig and Log.pdf">Algebra 5-Trignometry and Logarithm</a>
-            </li>
-        </ol>
+            <h3>Algebra</h3>
 
-        <h3>Combinatorics</h3>
-        <ol>
-            <li>
-                <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank</a>
-            </li>
-        </ol>
-        <h3>Number Theory</h3>
-        <ol>
-            <li>
-                <a href="Number Theory 1.pdf">Number Theory 1-Basis of Number Theory-Blank (Unfinished)</a>
-            </li>
-        </ol>
-        <h2>Problem of the Day</h2>
-        <ol>
-            <li>
-                <a href="https://www.instagram.com/tssmathclub/">Problem of the Day</a>
-            </li>
-        </ol>
-        <h2>External Links</h2>
-        <ol>
-            <li>
-                <a href="https://www.cemc.uwaterloo.ca/contests/past_contests.html">CEMC Contests</a>
-            </li>
-            <li>
-                <a href="https://cms.math.ca/competitions/comc/">COMC Contests</a>
-            </li>
-            <li>
-                <a href="https://artofproblemsolving.com/wiki/index.php/AMC_10_Problems_and_Solutions">AMC10 Contests</a>
-            </li>
-            <li>
-                <a href="https://artofproblemsolving.com/wiki/index.php/AMC_12_Problems_and_Solutions">AMC12 Contests</a>
-            </li>
-            <li>
-                <a href="https://artofproblemsolving.com/wiki/index.php/AIME_Problems_and_Solutions">AIME Contests</a>
-            </li>
-        </ol>
+            <ol>
+                <li>
+                    <a href="Alge1.pdf">Algebra 1-Basis of Algebra-Blank</a> <br>
+                    <a href="Alge1_Filled_Hand_Written.pdf">Algebra 1-Basis of Algebra-Filled (Hand Written)</a>
+                </li>
+                <li>
+                    <a href="Alge2.pdf">Algebra 2-Functional Equations-Blank</a> <br>
+                    <a href="Alge2_Filled_Hand_Written.pdf">Algebra 2-Functional Equations-Filled (Hand Written)</a>
+                </li>
+                <li>
+                    <a href="Alge3.pdf">Algebra 3-Sequence and Series-Blank</a>
+                </li>
+                <li>
+                    <a href="Alge4.pdf">Algebra 4-Miscellaneous-Blank</a>
+                </li>
+                <li>
+                    <a href="Trig and Log.pdf">Algebra 5-Trignometry and Logarithm</a>
+                </li>
+            </ol>
+
+            <h3>Combinatorics</h3>
+            <ol>
+                <li>
+                    <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank</a>
+                </li>
+            </ol>
+            <h3>Number Theory</h3>
+            <ol>
+                <li>
+                    <a href="Number Theory 1.pdf">Number Theory 1-Basis of Number Theory-Blank (Unfinished)</a>
+                </li>
+            </ol>
+            <h2>Problem of the Day</h2>
+            <ol>
+                <li>
+                    <a href="https://www.instagram.com/tssmathclub/">Problem of the Day</a>
+                </li>
+            </ol>
+            <h2>External Links</h2>
+            <ol>
+                <li>
+                    <a href="https://www.cemc.uwaterloo.ca/contests/past_contests.html">CEMC Contests</a>
+                </li>
+                <li>
+                    <a href="https://cms.math.ca/competitions/comc/">COMC Contests</a>
+                </li>
+                <li>
+                    <a href="https://artofproblemsolving.com/wiki/index.php/AMC_10_Problems_and_Solutions">AMC10 Contests</a>
+                </li>
+                <li>
+                    <a href="https://artofproblemsolving.com/wiki/index.php/AMC_12_Problems_and_Solutions">AMC12 Contests</a>
+                </li>
+                <li>
+                    <a href="https://artofproblemsolving.com/wiki/index.php/AIME_Problems_and_Solutions">AIME Contests</a>
+                </li>
+            </ol>
+        </div>
         <hr>
         <footer>
-            <p>TSS Math Club</p>
-            <p><a href="https://discord.gg/x8U6ymvAw8">Math Club Discord</a></p>
-            <p><a href="mailto:tssmathclubofficial@gmail.com">tssmathclubofficial@gmail.com</a></p>
+            <p>Provided by TSS Math Club</p>
+            <div style="display: flex; flex-direction: row; flex-wrap: wrap">
+                <p><a href="https://discord.gg/x8U6ymvAw8">Join our Discord Server</a></p>
+                <p><a href="mailto:tssmathclubofficial@gmail.com">Contact us via Email</a></p>
+            </div>
         </footer>
-
-
+    </div>
     </body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;600&display=swap');
+    :root{
+        --dark: #1e1919;
+        --highlight: #363230;
+        --sec: #d56060;
+        --pri: #DCD7C9;
+        --tri: #E9A178;
+    }
+    html{
+        background-color: var(--dark);
+        color: var(--pri);
+        font-family: 'Raleway', sans-serif;
+        transition: 0.2s;
+    }
+    a{
+        color: var(--tri);
+        text-decoration: none;
+    }
+    a:hover{
+        text-decoration: underline;
+        color: #eaae8b;
+    }
+    h2{
+        color: var(--sec)
+    }
+    .container{
+        padding: 30px;
+    }
+    .card{
+        background-color: var(--highlight);
+        padding: 15px 30px;
+        box-shadow: 10px 5px 5px #101111;
+        border-radius: 10px;
+    }
+    .large{
+        font-family: 'Pacifico', cursive;
+        font-size: 6vw;
+    }
+    .small{
+        font-size: 2vw;
+    }
+    .hcard{
+        padding: 30px;
+    }
+    footer a{
+        padding: 15px 20px;
+        background-color: #3e723f;
+        border-radius: 3px;
+        color: #ffffff;
+        text-decoration: none;
+        margin-right: 20px;
+    }
+    footer a:hover{
+        background-color: #70b070;
+    }
+    @media only screen and (max-width: 600px) {
+        .container{
+            padding: 0;
+        }
+        .large{
+            font-family: 'Pacifico', cursive;
+            font-size: 15vw;
+        }
+        .small{
+            font-size: 6vw;
+        }
+        .hcard{
+            padding: 0;
+        }
+        .card{
+            padding: 15px 15px;
+        }
+        footer a{
+            padding: 5px 10px;
+            margin-right: 4px;
+        }
+    }
+</style>
 </html>
