--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h3>Number Theory</h3>
             <ol>
                 <li>
-                    <a href="Number Theory 1.pdf">Number Theory 1-Basis of Number Theory-Blank (Unfinished)</a>
+                    <a href="Number Theory 1.pdf">Number Theory 1-Basis of Number Theory-Blank</a>
                 </li>
             </ol>
             <h2>Problem of the Day</h2>
