--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             <h3>Combinatorics</h3>
             <ol>
                 <li>
-                    <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank</a>
+                    <a href="Combo1.pdf">Combinatorics 1-Basis of Combinatorics-Blank</a><br>
+                    <a href="Combo1_Filled_Hand_Written.pdf">Combinatorics 1-Basis of Combinatorics-Filled (Hand Written)</a>
                 </li>
             </ol>
             <h3>Number Theory</h3>
