--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
             </ol>
             <h2>Handouts</h2>
-            <h3>Geometry</h3>
+            <h3>2D-Geometry</h3>
             <ol>
                 <li>
                     <a href="Geo1_Blank.pdf">Geometry 1-Basis of Geometry-Blank</a> <br>
@@ -45,15 +45,25 @@
                     <a href="Geo3_Blank.pdf">Geometry 3-Miscellaneous-Blank</a> <br>
                     <a href="Geo3.pdf">Geometry 3-Miscellaneous-Filled</a>
                 </li>
+
+            </ol>
+
+            <h3>Analytic Geometry and Vectors</h3>
+            <ol>
                 <li>
                     <a href="Geo4_Blank.pdf">Geometry 4-Analytic Geometry-Blank</a> <br>
                     <a href="Geo4.pdf">Geometry 4-Analytic Geometry-Filled</a>
                 </li>
-                <li>
-                    <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
-                    <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
-                </li>
+            </ol>
 
+            <h3>3D Geometry</h3>
+            <ol>
+                <li>
+                    <li>
+                        <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
+                        <a href="Geo5.pdf">Geometry 5-3D Geometry-Filled</a>
+                    </li>
+                </li>
             </ol>
 
             <h3>Algebra</h3>
