--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </li>
             </ol>
 
-            <h3>3D Geometry</h3>
+            <h3>3D-Geometry</h3>
             <ol>
                 <li>
                     <a href="Geo5_Blank.pdf">Geometry 5-3D Geometry-Blank</a> <br>
